--- a/Anti-Line.vcxproj
+++ b/Anti-Line.vcxproj
@@ -151,6 +151,11 @@
     <ClInclude Include="src\game\points\StartPoint.h" />
     <ClInclude Include="src\Util.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".gitattributes" />
+    <None Include=".gitignore" />
+    <None Include="README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
