Added End Point

--- a/Anti-Line.vcxproj.filters
+++ b/Anti-Line.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="src\game\Round.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\game\points\EndPoint.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\game\points\StartPoint.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\GameData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\game\points\EndPoint.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
