--- a/Anti-Line.vcxproj.filters
+++ b/Anti-Line.vcxproj.filters
@@ -59,6 +59,9 @@
     <ClInclude Include="src\IPaintable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\ITickable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
