--- a/Anti-Line.vcxproj
+++ b/Anti-Line.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="src\game\points\StartPoint.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\game\points\Point.h" />
     <ClInclude Include="src\game\PredeterminedPath.h" />
     <ClInclude Include="src\game\Line.h" />
     <ClInclude Include="src\game\Player.h" />
