--- a/Anti-Line.vcxproj
+++ b/Anti-Line.vcxproj
@@ -164,6 +164,7 @@
     <ClInclude Include="src\game\Round.h" />
     <ClInclude Include="src\game\Pos.h" />
     <ClInclude Include="src\game\points\StartPoint.h" />
+    <ClInclude Include="src\game\RoundStatus.h" />
     <ClInclude Include="src\IPaintable.h" />
     <ClInclude Include="src\ITickable.h" />
     <ClInclude Include="src\Util.h" />
