--- a/Anti-Line.vcxproj
+++ b/Anti-Line.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="src\game\Pos.cpp" />
     <ClCompile Include="src\Anti-Line.cpp" />
     <ClCompile Include="src\game\points\StartPoint.cpp" />
+    <ClCompile Include="src\game\Stopwatch.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\game\Game.h" />
@@ -169,6 +170,7 @@
     <ClInclude Include="src\IPaintable.h" />
     <ClInclude Include="src\ITickable.h" />
     <ClInclude Include="src\Util.h" />
+    <ClInclude Include="src\game\Stopwatch.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitattributes" />
