--- a/Anti-Line.vcxproj
+++ b/Anti-Line.vcxproj
@@ -145,6 +145,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\game\ScoreText.cpp" />
     <ClCompile Include="src\game\Game.cpp" />
     <ClCompile Include="src\game\PredeterminedPath.cpp" />
     <ClCompile Include="src\game\Line.cpp" />
@@ -157,6 +158,7 @@
     <ClCompile Include="src\game\Stopwatch.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\game\ScoreText.h" />
     <ClInclude Include="src\game\Game.h" />
     <ClInclude Include="src\game\points\Point.h" />
     <ClInclude Include="src\game\PredeterminedPath.h" />
