--- a/Anti-Line.vcxproj
+++ b/Anti-Line.vcxproj
@@ -145,6 +145,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\game\text\LoseText.cpp" />
     <ClCompile Include="src\game\text\ScoreText.cpp" />
     <ClCompile Include="src\game\Game.cpp" />
     <ClCompile Include="src\game\PredeterminedPath.cpp" />
@@ -157,8 +158,10 @@
     <ClCompile Include="src\game\points\StartPoint.cpp" />
     <ClCompile Include="src\game\Stopwatch.cpp" />
     <ClCompile Include="src\Paintable.cpp" />
+    <ClCompile Include="src\game\text\WinText.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\game\text\LoseText.h" />
     <ClInclude Include="src\game\text\ScoreText.h" />
     <ClInclude Include="src\game\Game.h" />
     <ClInclude Include="src\game\points\Point.h" />
@@ -174,6 +177,7 @@
     <ClInclude Include="src\ITickable.h" />
     <ClInclude Include="src\Util.h" />
     <ClInclude Include="src\game\Stopwatch.h" />
+    <ClInclude Include="src\game\text\WinText.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitattributes" />
