Added a separate EndText class for LoseText and WinText to inherit from

--- a/Anti-Line.vcxproj
+++ b/Anti-Line.vcxproj
@@ -146,6 +146,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\game\text\EndText.cpp" />
     <ClCompile Include="src\game\text\LoseText.cpp" />
     <ClCompile Include="src\game\text\ScoreText.cpp" />
     <ClCompile Include="src\game\Game.cpp" />
@@ -162,6 +163,7 @@
     <ClCompile Include="src\game\text\WinText.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\game\text\EndText.h" />
     <ClInclude Include="src\game\text\LoseText.h" />
     <ClInclude Include="src\game\text\ScoreText.h" />
     <ClInclude Include="src\game\Game.h" />
