--- a/Anti-Line.vcxproj.filters
+++ b/Anti-Line.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="src\game\text\WinText.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\game\text\EndText.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\game\points\StartPoint.h">
@@ -108,6 +111,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\game\text\WinText.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\game\text\EndText.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
