Changed all the interfaces into a single game object class

--- a/Anti-Line.vcxproj
+++ b/Anti-Line.vcxproj
@@ -159,10 +159,10 @@
     <ClCompile Include="src\Anti-Line.cpp" />
     <ClCompile Include="src\game\points\StartPoint.cpp" />
     <ClCompile Include="src\game\Stopwatch.cpp" />
-    <ClCompile Include="src\Paintable.cpp" />
     <ClCompile Include="src\game\text\WinText.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\game\GameObject.h" />
     <ClInclude Include="src\game\text\EndText.h" />
     <ClInclude Include="src\game\text\LoseText.h" />
     <ClInclude Include="src\game\text\ScoreText.h" />
@@ -176,9 +176,6 @@
     <ClInclude Include="src\game\Pos.h" />
     <ClInclude Include="src\game\points\StartPoint.h" />
     <ClInclude Include="src\game\RoundStatus.h" />
-    <ClInclude Include="src\IPlayerCollidable.h" />
-    <ClInclude Include="src\Paintable.h" />
-    <ClInclude Include="src\ITickable.h" />
     <ClInclude Include="src\Util.h" />
     <ClInclude Include="src\game\Stopwatch.h" />
     <ClInclude Include="src\game\text\WinText.h" />
