--- a/Anti-Line.vcxproj.filters
+++ b/Anti-Line.vcxproj.filters
@@ -48,9 +48,6 @@
     <ClCompile Include="src\game\text\ScoreText.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Paintable.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\game\text\LoseText.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -78,12 +75,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\game\Player.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Paintable.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\ITickable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\game\Line.h">
@@ -116,7 +107,7 @@
     <ClInclude Include="src\game\text\EndText.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\IPlayerCollidable.h">
+    <ClInclude Include="src\game\GameObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
